--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.4.0",
+    "@moralisweb3/next": "^2.27.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.13.4",
+    "express-rate-limit": "^7.4.1",
     "lucide-react": "^0.468.0",
-    "next": "15.1.0",
+    "moralis": "^2.27.2",
+    "next": "^15.1.0",
+    "next-auth": "^4.24.11",
+    "node-cache": "^5.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-moralis": "^1.4.2",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.54"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
