--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@moralisweb3/next": "^2.27.2",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "ethers": "^6.13.4",
     "express-rate-limit": "^7.4.1",
     "lucide-react": "^0.468.0",
@@ -24,6 +26,7 @@
     "next-auth": "^4.24.11",
     "node-cache": "^5.1.2",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-moralis": "^1.4.2",
     "tailwind-merge": "^2.5.5",
