--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@moralisweb3/next": "^2.27.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "cookies-next": "^5.0.2",
     "date-fns": "^3.6.0",
     "ethers": "^6.13.4",
     "express-rate-limit": "^7.4.1",
