--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-moralis": "^1.4.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
