--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@moralisweb3/next": "^2.27.2",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.20",
@@ -32,6 +34,7 @@
     "moralis": "^2.27.2",
     "next": "^15.1.0",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.4",
     "node-cache": "^5.1.2",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
